# ChangeLog for dev-perl/Email-Address
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Address/ChangeLog,v 1.33 2007/06/25 10:09:06 mcummings Exp $

*Email-Address-1.88.8 (25 Jun 2007)

  25 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  +Email-Address-1.88.8.ebuild:
  Version bump

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Email-Address-1.88.6.ebuild, Email-Address-1.88.7.ebuild:
  Marking sparc stable

  15 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Email-Address-1.88.7.ebuild:
  Marking amd64 stable

*Email-Address-1.88.7 (06 Apr 2007)

  06 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +Email-Address-1.88.7.ebuild:
  Version bump

*Email-Address-1.88.6 (11 Mar 2007)

  11 Mar 2007; Michael Cummings <mcummings@gentoo.org>
  +Email-Address-1.88.6.ebuild:
  Version bump

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Email-Address-1.88.4.ebuild:
  Stable on x86, bug #169152.

  20 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Email-Address-1.88.4.ebuild:
  White space cleaning

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -Email-Address-1.88.3.ebuild:
  Ebuild maintenance

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Email-Address-1.88.4.ebuild:
  Marking amd64 stable

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Email-Address-1.88.4.ebuild:
  Marking sparc stable

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Email-Address-1.87.0.ebuild, -Email-Address-1.87.1.ebuild,
  Email-Address-1.88.3.ebuild, Email-Address-1.88.4.ebuild:
  Ebuild maintenance

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Email-Address-1.88.3.ebuild:
  Marking sparc stable

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Email-Address-1.87.0.ebuild, Email-Address-1.87.1.ebuild,
  -Email-Address-1.88.0.ebuild, -Email-Address-1.88.2.ebuild,
  Email-Address-1.88.3.ebuild, Email-Address-1.88.4.ebuild: