@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MessageID/Attic/Email-MessageID-1.35.1.ebuild,v 1.2 2007/06/21 15:59:22 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MessageID/Attic/Email-MessageID-1.35.1.ebuild,v 1.3 2007/06/30 15:38:16 armin76 Exp $
 
 inherit perl-module versionator
 
@@ -16,7 +16,7 @@ IUSE=""
 
 SLOT="0"
 LICENSE="|| ( Artistic GPL-2 )"
-KEYWORDS="~amd64 ~ia64 ~ppc ~ppc64 sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 sparc ~x86"
 
 DEPEND="virtual/perl-Test-Simple
 	dev-perl/Email-Address
