@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Return-Value
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Return-Value/ChangeLog,v 1.6 2007/04/10 12:20:48 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Return-Value/ChangeLog,v 1.7 2007/06/30 15:35:19 armin76 Exp $
+
+  30 Jun 2007; Raúl Porcel <armin76@gentoo.org> Return-Value-1.302.ebuild:
+  Add ~alpha wrt #165190
 
   10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   Return-Value-1.302.ebuild:
