@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Email-Address
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Address/ChangeLog,v 1.33 2007/06/25 10:09:06 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Address/ChangeLog,v 1.34 2007/06/30 15:34:19 armin76 Exp $
+
+  30 Jun 2007; Raúl Porcel <armin76@gentoo.org>
+  Email-Address-1.88.8.ebuild:
+  Add ~alpha wrt #165190
 
 *Email-Address-1.88.8 (25 Jun 2007)
 
